tests/errors/zlib_bad_data.ki
discard import("zlib").decompress("garbage!!!")
